tests/error/unknown_type.gw
// [contains] unknown in declaration
 // hit the error with an unknown type
unknown_type variable;
